@@ -4,6 +4,12 @@ Version 1.3.6+svn:
      will not try to create the default install directory for python
      stuff when it isn't needed. Otherwise if you aren't root, make
      errors out.
+ * multiplayer:
+   * unit descriptions are no longer evaluated for the recruitment checksum
+     and thus avoiding an OOS error when different languages are used. 
+     The change is incompatible with older trunk versions fixes (bug #9472).
+ * miscellaneous and bug fixes
+   * various code cleanups
 
 Version 1.3.6:
  * language and i18n:
